reverse_binary_search

--- a/dbn_parametric_search.ipynb
+++ b/dbn_parametric_search.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,13 +68,13 @@
     "        return None\n",
     "    while start <= end:\n",
     "        mid = (start + end) // 2\n",
-    "        print(mid)\n",
     "        if target == array[mid]:\n",
     "            return mid\n",
     "        elif target < array[mid]:\n",
     "            start = mid + 1\n",
     "        else:\n",
-    "            end = mid - 1"
+    "            end = mid - 1\n",
+    "    return mid"
    ]
   },
   {
@@ -156,9 +156,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n",
+      "14\n",
+      "17\n",
+      "15\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "15"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "reverse_binary_search_while(my_rice, m, 0, len(my_rice)-1)"
    ]
