--- a/dbn_parametric_search.ipynb
+++ b/dbn_parametric_search.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,12 +54,12 @@
     "        reverse_binary_search(array, target, mid+1, end)\n",
     "    else:\n",
     "        reverse_binary_search(array, target, start, mid-1)\n",
-    "    return None"
+    "    return mid"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,26 +156,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "9\n",
-      "14\n",
-      "17\n",
-      "15\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "15"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
