reverse_binary_search

--- a/dbn_parametric_search.ipynb
+++ b/dbn_parametric_search.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,15 +48,39 @@
     "    if start > end:\n",
     "        return None\n",
     "    mid = (start + end) // 2\n",
+    "    print(mid)\n",
+    "    \n",
     "    if target == array[mid]:\n",
     "        return mid\n",
     "    elif target < array[mid]:\n",
     "        reverse_binary_search(array, target, mid+1, end)\n",
     "    else:\n",
-    "        reverse_binary_search(array, target, start, mid-1)\n",
+    "        reverse_binary_search(array, target, start, mid-1)        \n",
+    "    \n",
+    "    return mid"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def reverse_binary_search(array, target, start, end):\n",
+    "    if start > end:\n",
+    "        return None\n",
+    "    else:\n",
+    "        mid = (start + end) // 2\n",
+    "        #print(mid)\n",
     "        \n",
-    "    print(mid)\n",
-    "    return None"
+    "        if target == array[mid]:\n",
+    "            return mid\n",
+    "        elif target < array[mid]:\n",
+    "            reverse_binary_search(array, target, mid+1, end)\n",
+    "        else:\n",
+    "            reverse_binary_search(array, target, start, mid-1)        \n",
+    "        \n",
+    "        return mid"
    ]
   },
   {
@@ -139,17 +163,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "17\n",
+      "9\n",
       "14\n",
-      "9\n"
+      "17\n",
+      "15\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
