--- a/dbn_parametric_search.ipynb
+++ b/dbn_parametric_search.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,21 +48,18 @@
     "    if start > end:\n",
     "        return None\n",
     "    mid = (start + end) // 2\n",
-    "    print(mid)\n",
     "    \n",
     "    if target == array[mid]:\n",
     "        return mid\n",
     "    elif target < array[mid]:\n",
-    "        reverse_binary_search(array, target, mid+1, end)\n",
+    "        return reverse_binary_search(array, target, mid+1, end)\n",
     "    else:\n",
-    "        reverse_binary_search(array, target, start, mid-1)        \n",
-    "    \n",
-    "    return mid"
+    "        return reverse_binary_search(array, target, start, mid-1) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,26 +160,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "9\n",
-      "14\n",
-      "17\n",
-      "15\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "9"
+       "15"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +189,7 @@
        "15"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
