reverse_binary_search

--- a/dbn_parametric_search.ipynb
+++ b/dbn_parametric_search.ipynb
@@ -9,14 +9,14 @@
     "def binary_search(array, target, start, end):\n",
     "    if start > end : \n",
     "        return None\n",
-    "    mid = (start + end) // 2\n",
-    "    if target == array[mid]:\n",
-    "        return mid\n",
-    "    elif target < array[mid]:\n",
-    "        return binary_search(array, target, start, mid-1)\n",
     "    else:\n",
-    "        return binary_search(array, target, mid+1, end)\n",
-    "    return None"
+    "        mid = (start + end) // 2\n",
+    "        if target == array[mid]:\n",
+    "            return mid\n",
+    "        elif target < array[mid]:\n",
+    "            return binary_search(array, target, start, mid-1)\n",
+    "        else:\n",
+    "            return binary_search(array, target, mid+1, end)"
    ]
   },
   {
@@ -35,7 +35,8 @@
     "        elif target < array[mid]:\n",
     "            end = mid - 1\n",
     "        else:\n",
-    "            start = mid + 1"
+    "            start = mid + 1\n",
+    "    return mid"
    ]
   },
   {
@@ -59,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +69,6 @@
     "        return None\n",
     "    else:\n",
     "        mid = (start + end) // 2\n",
-    "        #print(mid)\n",
     "        \n",
     "        if target == array[mid]:\n",
     "            return mid\n",
