reverse_binary_search

--- a/dbn_parametric_search.ipynb
+++ b/dbn_parametric_search.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +181,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "k = 0\n",
+    "while measure_rice(k) >= m:\n",
+    "    reverse_binary_search(cutting_lengths, m, 0, len(cutting_lengths)-1)"
+   ]
   }
  ],
  "metadata": {
