--- a/dbn_parametric_search.ipynb
+++ b/dbn_parametric_search.ipynb
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
        "15"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
        "15"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,7 +184,9 @@
    "source": [
     "k = 0\n",
     "while measure_rice(k) >= m:\n",
-    "    reverse_binary_search(cutting_lengths, m, 0, len(cutting_lengths)-1)"
+    "    reverse_binary_search(cutting_lengths, m, 0, len(cutting_lengths)-1)\n",
+    "    k += 1\n",
+    "print(k)"
    ]
   }
  ],
