--- a/dbn_parametric_search.ipynb
+++ b/dbn_parametric_search.ipynb
@@ -89,7 +89,7 @@
      "output_type": "stream",
      "text": [
       "n : 4, m : 6\n",
-      "rice_array : [19, 15, 10, 17]\n",
+      "rice_array : [19, 10, 15, 17]\n",
       "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19]\n"
      ]
     }
@@ -178,16 +178,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n"
+     ]
+    }
+   ],
    "source": [
     "k = 0\n",
     "while measure_rice(k) >= m:\n",
     "    reverse_binary_search(cutting_lengths, m, 0, len(cutting_lengths)-1)\n",
     "    k += 1\n",
-    "print(k)"
+    "print(k-1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
