reverse_binary_search

--- a/dbn_parametric_search.ipynb
+++ b/dbn_parametric_search.ipynb
@@ -199,10 +199,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n"
+     ]
+    }
+   ],
+   "source": [
+    "k = 0\n",
+    "while measure_rice(k) >= m:\n",
+    "    reverse_binary_search_while(cutting_lengths, m, 0, len(cutting_lengths)-1)\n",
+    "    k += 1\n",
+    "print(k-1)"
+   ]
   }
  ],
  "metadata": {
