--- a/dbn_parametric_search.ipynb
+++ b/dbn_parametric_search.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,6 +49,7 @@
     "    if start > end:\n",
     "        return None\n",
     "    mid = (start + end) // 2\n",
+    "    print(mid, end=' ')\n",
     "    \n",
     "    if target == array[mid]:\n",
     "        return mid\n",
@@ -69,6 +70,7 @@
     "        return None\n",
     "    while start <= end:\n",
     "        mid = (start + end) // 2\n",
+    "        print(mid, end=' ')\n",
     "        if target == array[mid]:\n",
     "            return mid\n",
     "        elif target < array[mid]:\n",
