reverse_binary_search

--- a/dbn_parametric_search.ipynb
+++ b/dbn_parametric_search.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,6 +50,7 @@
     "        return None\n",
     "    mid = (start + end) // 2\n",
     "    print(mid, end=' ')\n",
+    "    print()\n",
     "    \n",
     "    if target == array[mid]:\n",
     "        return mid\n",
