reverse_binary_search

--- a/dbn_parametric_search.ipynb
+++ b/dbn_parametric_search.ipynb
@@ -72,6 +72,8 @@
     "    while start <= end:\n",
     "        mid = (start + end) // 2\n",
     "        print(mid, end=' ')\n",
+    "        print()\n",
+    "        \n",
     "        if target == array[mid]:\n",
     "            return mid\n",
     "        elif target < array[mid]:\n",
