reverse_binary_search

--- a/dbn_parametric_search.ipynb
+++ b/dbn_parametric_search.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,8 +49,8 @@
     "    if start > end:\n",
     "        return None\n",
     "    mid = (start + end) // 2\n",
-    "    print(mid, end=' ')\n",
-    "    print()\n",
+    "    #print(mid, end=' ')\n",
+    "    #print()\n",
     "    \n",
     "    if target == array[mid]:\n",
     "        return mid\n",
@@ -71,8 +71,8 @@
     "        return None\n",
     "    while start <= end:\n",
     "        mid = (start + end) // 2\n",
-    "        print(mid, end=' ')\n",
-    "        print()\n",
+    "        #print(mid, end=' ')\n",
+    "        #print()\n",
     "        \n",
     "        if target == array[mid]:\n",
     "            return mid\n",
