reverse_binary_search

--- a/dbn_bisect.ipynb
+++ b/dbn_bisect.ipynb
@@ -8,6 +8,27 @@
    "source": [
     "from bisect import bisect_right, bisect_left"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "N : 7,   x : 2\n",
+      "seq : [1, 1, 2, 2, 2, 2, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "N, x = list(map(int, input().split()))      # 7 2\n",
+    "seq = list(map(int, input().split()))       # 1 1 2 2 2 2 3\n",
+    "print(f\"N : {N},   x : {x}\")\n",
+    "print(f\"seq : {seq}\")"
+   ]
   }
  ],
  "metadata": {
