reverse_binary_search

--- a/dbn_bisect.ipynb
+++ b/dbn_bisect.ipynb
@@ -29,6 +29,27 @@
     "print(f\"N : {N},   x : {x}\")\n",
     "print(f\"seq : {seq}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "start : 2,   end : 6\n",
+      "배열안에 2의 개수 : 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "start = bisect_left(seq, x)\n",
+    "end = bisect_right(seq, x)\n",
+    "print(f\"start : {start},   end : {end}\")\n",
+    "print(f\"배열안에 {x}의 개수 : {end - start}\")"
+   ]
   }
  ],
  "metadata": {
