--- a/dbn_bisect.ipynb
+++ b/dbn_bisect.ipynb
@@ -50,6 +50,38 @@
     "print(f\"start : {start},   end : {end}\")\n",
     "print(f\"배열안에 {x}의 개수 : {end - start}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "expected an indented block (2965810994.py, line 7)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Input \u001b[1;32mIn [6]\u001b[1;36m\u001b[0m\n\u001b[1;33m    if target > array[start]:\u001b[0m\n\u001b[1;37m                             ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m expected an indented block\n"
+     ]
+    }
+   ],
+   "source": [
+    "def conditional_binary_search(array, target, start, end):\n",
+    "    if start > end:\n",
+    "        return None\n",
+    "    \n",
+    "    mid = (start + end) // 2\n",
+    "    while target == array[mid]:\n",
+    "        start = mid -1\n",
+    "        end = mid + 1            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
