reverse_binary_search

--- a/dbn_bisect.ipynb
+++ b/dbn_bisect.ipynb
@@ -32,6 +32,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def binary_search(array, target, start, end):\n",
+    "    if start > end : \n",
+    "        return None\n",
+    "    else:\n",
+    "        mid = (start + end) // 2\n",
+    "        if target == array[mid]:\n",
+    "            return mid\n",
+    "        elif target < array[mid]:\n",
+    "            return binary_search(array, target, start, mid-1)\n",
+    "        else:\n",
+    "            return binary_search(array, target, mid+1, end)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [
@@ -53,19 +72,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def conditional_binary_search(array, target, start, end):\n",
-    "    if start > end:\n",
-    "        return None\n",
-    "    \n",
-    "    mid = (start + end) // 2\n",
-    "    while target == array[mid]:\n",
-    "        start = mid -1\n",
-    "        end = mid + 1\n",
-    "    return end - start            "
+    "def binary_search_first_element(array, target, start, end):\n",
+    "    if array.count(target) == 0:\n",
+    "        return 0\n",
+    "    elif array.count(target) == 1:\n",
+    "        return binary_search(array, target, start, end)            "
    ]
   },
   {
@@ -73,7 +88,22 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def conditional_binary_search(array, target, start, end):\n",
+    "    if start > end:\n",
+    "        return None\n",
+    "    \n",
+    "      "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conditional_binary_search(seq, 2, 0, len(seq)-1)"
+   ]
   }
  ],
  "metadata": {
