reverse_binary_search

--- a/dbn_bisect.ipynb
+++ b/dbn_bisect.ipynb
@@ -24,8 +24,8 @@
     }
    ],
    "source": [
-    "N, x = list(map(int, input().split()))      # 7 2\n",
-    "seq = list(map(int, input().split()))       # 1 1 2 2 2 2 3\n",
+    "N, x = list(map(int, input().split()))      # 22 6\n",
+    "seq = list(map(int, input().split()))       # 1 1 2 2 2 2 3 4 6 6 6 6 6 6 6 6 6 6 6 6 9 11\n",
     "print(f\"N : {N},   x : {x}\")\n",
     "print(f\"seq : {seq}\")"
    ]
@@ -72,24 +72,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[3]"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def binary_search_first_element(array, target, start, end):\n",
-    "    if array.count(target) == 0:\n",
-    "        return 0\n",
-    "    elif array.count(target) == 1:\n",
-    "        return binary_search(array, target, start, end)            "
+    "[x for x in seq if x > 2]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
-    "conditional_binary_search(seq, 2, 0, len(seq)-1)"
+    "def binary_search_count_x(array, target, start, end):\n",
+    "    if array.count(target) == 0:\n",
+    "        return 0\n",
+    "    elif array.count(target) == 1:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        print(array.count(target))\n",
+    "        less_than_max_or_equal_to_target = max([x for x in array if x <= target])\n",
+    "        greater_than_min_target = min([x for x in array if x > target])\n",
+    "        print(greater_than_min_target)\n",
+    "        print(less_than_max_or_equal_to_target)\n",
+    "        return greater_than_min_target - less_than_max_or_equal_to_target\n",
+    "               "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def binary_search_count_x(array, target, start, end):\n",
+    "    if array.count(target) == 0:\n",
+    "        return 0\n",
+    "    elif array.count(target) == 1:\n",
+    "        return 1\n",
+    "    else:        \n",
+    "        less_than_max_or_equal_to_target = max([x for x in array if x < target])\n",
+    "        greater_than_min_target = min([x for x in array if x > target])\n",
+    "        \n",
+    "        less_than_target_index = binary_search(array, less_than_max_or_equal_to_target, 0, len(array)-1) + 1\n",
+    "        greater_than_target_index = binary_search(array, greater_than_min_target, 0, len(array)-1)\n",
+    "        \n",
+    "        return greater_than_target_index - less_than_target_index\n",
+    "               "
    ]
   }
  ],
