reverse_binary_search

--- a/dbn_bisect.ipynb
+++ b/dbn_bisect.ipynb
@@ -11,15 +11,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "N : 7,   x : 2\n",
-      "seq : [1, 1, 2, 2, 2, 2, 3]\n"
+      "N : 22,   x : 6\n",
+      "seq : [1, 1, 2, 2, 2, 2, 3, 4, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 9, 11]\n"
      ]
     }
    ],
@@ -32,15 +32,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "start : 2,   end : 6\n",
-      "배열안에 2의 개수 : 4\n"
+      "start : 8,   end : 20\n",
+      "배열안에 6의 개수 : 12\n"
      ]
     }
    ],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,52 +72,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[3]"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "[x for x in seq if x > 2]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def binary_search_count_x(array, target, start, end):\n",
-    "    if array.count(target) == 0:\n",
-    "        return 0\n",
-    "    elif array.count(target) == 1:\n",
-    "        return 1\n",
-    "    else:\n",
-    "        print(array.count(target))\n",
-    "        less_than_max_or_equal_to_target = max([x for x in array if x <= target])\n",
-    "        greater_than_min_target = min([x for x in array if x > target])\n",
-    "        print(greater_than_min_target)\n",
-    "        print(less_than_max_or_equal_to_target)\n",
-    "        return greater_than_min_target - less_than_max_or_equal_to_target\n",
-    "               "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def binary_search_count_x(array, target, start, end):\n",
+    "def binary_search_count_target(array, target, start, end):\n",
     "    if array.count(target) == 0:\n",
     "        return 0\n",
     "    elif array.count(target) == 1:\n",
@@ -131,6 +90,26 @@
     "        \n",
     "        return greater_than_target_index - less_than_target_index\n",
     "               "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "binary_search_count_target(seq, x, 0, len(seq)-1)"
    ]
   }
  ],
