reverse_binary_search

--- a/dbn_bisect.ipynb
+++ b/dbn_bisect.ipynb
@@ -111,6 +111,34 @@
    "source": [
     "binary_search_count_target(seq, x, 0, len(seq)-1)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### count_by_range(array, x, y) 함수 만들기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
