reverse_binary_search

--- a/dbn_bisect.ipynb
+++ b/dbn_bisect.ipynb
@@ -121,17 +121,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "N : 27,   x : 6\n",
+      "seq : [1, 1, 2, 2, 2, 2, 3, 4, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 7, 7, 7, 7, 7, 9, 11]\n"
+     ]
+    }
+   ],
+   "source": [
+    "N, x = list(map(int, input().split()))      # 27 6\n",
+    "seq = list(map(int, input().split()))       # 1 1 2 2 2 2 3 4 6 6 6 6 6 6 6 6 6 6 6 6 7 7 7 7 7 9 11\n",
+    "print(f\"N : {N},   x : {x}\")\n",
+    "print(f\"seq : {seq}\")"
+   ]
   },
   {
    "cell_type": "code",
