reverse_binary_search

--- a/dbn_bisect.ipynb
+++ b/dbn_bisect.ipynb
@@ -121,23 +121,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "N : 27,   x : 6\n",
-      "seq : [1, 1, 2, 2, 2, 2, 3, 4, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 7, 7, 7, 7, 7, 9, 11]\n"
+      "N : 28,   x : 6\n",
+      "seq : [1, 1, 2, 2, 2, 2, 3, 4, 5, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 7, 7, 7, 7, 7, 8, 8, 8, 9, 9, 11]\n"
      ]
     }
    ],
    "source": [
-    "N, x = list(map(int, input().split()))      # 27 6\n",
-    "seq = list(map(int, input().split()))       # 1 1 2 2 2 2 3 4 6 6 6 6 6 6 6 6 6 6 6 6 7 7 7 7 7 9 11\n",
+    "N, x = list(map(int, input().split()))      # 32 6\n",
+    "seq = list(map(int, input().split()))       # 1 1 2 2 2 2 3 4 5 6 6 6 6 6 6 6 6 6 6 6 6 7 7 7 7 7 8 8 8 9 9 11\n",
     "print(f\"N : {N},   x : {x}\")\n",
     "print(f\"seq : {seq}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(32, 9, 21, 26)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(seq), seq.index(6), seq.index(7), seq.index(8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def binary_search(array, target, start, end):\n",
+    "    if start > end:\n",
+    "        return None\n",
+    "    else:\n",
+    "        mid = (start + end) // 2\n",
+    "        if target == array[mid]:\n",
+    "            return mid\n",
+    "        elif target < array[mid]:\n",
+    "            return binary_search(array, target, start, mid-1)\n",
+    "        else:\n",
+    "            return binary_search(array, target, mid+1, end)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "max_less_than_x = max([k for k in seq if k < x])\n",
+    "print(max_less_than_x)"
    ]
   },
   {
@@ -145,7 +202,16 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def count_by_range(array, x, y):\n",
+    "    \"\"\"Count the number of elements in interval between x and y inclusive\"\"\"\n",
+    "    \"\"\"Find the index of x.\"\"\"\n",
+    "    max_less_than_x = max([k for k in array if k < x])\n",
+    "    x_idx = binary_search(array, max_less_than_x, 0, len(array)-1) + 1  # Add 1 since x is inclusive of the interval\n",
+    "    \n",
+    "    \"\"\"Find the index of y.\"\"\"\n",
+    "    min_greater_than_y = min([k for k in array if k >])"
+   ]
   }
  ],
  "metadata": {
