reverse_binary_search

--- a/dbn_bisect.ipynb
+++ b/dbn_bisect.ipynb
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,11 +212,62 @@
     "        \"\"\"Find the index of x.\"\"\"\n",
     "        max_less_than_x = max([k for k in array if k < x])\n",
     "        x_idx = binary_search(array, max_less_than_x, 0, len(array)-1) + 1  # Add 1 since x is inclusive of the interval\n",
+    "        print(f\"max_less_than_x : {max_less_than_x},  x_idx : {x_idx}\")\n",
     "        \n",
     "        \"\"\"Find the index of y.\"\"\"\n",
     "        min_greater_than_y = min([k for k in array if k > y])\n",
-    "        y_idx = binary_search(array, min_greater_than_y, 0, len(array)-1) \n",
-    "       "
+    "        y_idx = binary_search(array, min_greater_than_y, 0, len(array)-1)\n",
+    "        print(f\"min_greater_than_y : {min_greater_than_y},  y_idx : {y_idx}\") \n",
+    "        \n",
+    "    return y_idx - x_idx       "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "max_less_than_x : 5,  x_idx : 9\n",
+      "min_greater_than_y : 7,  y_idx : 23\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "14"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "count_by_range(seq, 6, 6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "23"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "binary_search(seq, 7, 0, len(seq)-1)"
    ]
   }
  ],
