--- a/dbn_bisect.ipynb
+++ b/dbn_bisect.ipynb
@@ -121,15 +121,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "N : 35,   x : 6\n",
-      "seq : [1, 1, 2, 2, 2, 2, 3, 4, 5, 5, 5, 5, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 7, 7, 7, 7, 7, 8, 8, 8, 9, 9, 11]\n"
+      "N : 36,   x : 6\n",
+      "seq : [1, 1, 2, 2, 2, 2, 3, 4, 5, 5, 5, 5, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 7, 7, 7, 7, 7, 8, 8, 8, 9, 9, 11]\n"
      ]
     }
    ],
@@ -142,22 +142,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(35, 12, 24, 29, 13, 25)"
+       "(36, 13, 12, 25, 30, 13, 25)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(seq), seq.index(6), seq.index(7), seq.index(8), len([1, 1, 2, 2, 2, 2, 3, 4, 5, 5, 5, 5, 6]), len([1, 1, 2, 2, 2, 2, 3, 4, 5, 5, 5, 5, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 7])"
+    "len(seq), seq.count(6), seq.index(6), seq.index(7), seq.index(8), len([1, 1, 2, 2, 2, 2, 3, 4, 5, 5, 5, 5, 6]), len([1, 1, 2, 2, 2, 2, 3, 4, 5, 5, 5, 5, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 7])"
    ]
   },
   {
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,21 +318,22 @@
     "            if array.count(array[mid]) == 1:\n",
     "                return 1\n",
     "            elif array.count(array[mid]) > 1:\n",
-    "                return array.index(array[mid]), array.count(array[mid])"
+    "                print(array.index(array[mid]), array.count(array[mid]))\n",
+    "                "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(12, 12)"
+       "(12, 13)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
