More on dbn_bisect.ipynb

--- a/dbn_bisect.ipynb
+++ b/dbn_bisect.ipynb
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,7 +319,8 @@
     "                return 1\n",
     "            elif array.count(array[mid]) > 1:\n",
     "                print(array.index(array[mid]), array.count(array[mid]))\n",
-    "                "
+    "                start_idx = array.index(array[mid])\n",
+    "                print(start_idx)"
    ]
   },
   {
