More on dbn_bisect.ipynb

--- a/dbn_bisect.ipynb
+++ b/dbn_bisect.ipynb
@@ -305,11 +305,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def count_num_element(array, target, start, end):\n",
+    "def binary_search_duplicate_elements(array, target, start, end):\n",
     "    if start > end:\n",
     "        return None\n",
     "    else:\n",
@@ -318,23 +318,37 @@
     "            if array.count(array[mid]) == 1:\n",
     "                return 1\n",
     "            elif array.count(array[mid]) > 1:\n",
-    "                print(array.index(array[mid]), array.count(array[mid]))\n",
+    "                #print(array.index(array[mid]), array.count(array[mid]))\n",
     "                start_idx = array.index(array[mid])\n",
-    "                print(start_idx)"
+    "                #print(start_idx)\n",
+    "                return start_idx\n",
+    "        \n",
+    "        elif target < array[mid]:\n",
+    "            if array.count(array[mid]) == 1:\n",
+    "                return binary_search_duplicate_elements(array, target, start, mid-1)\n",
+    "            elif array.count(array[mid]) > 1:\n",
+    "                start_idx = array.index(array[mid])\n",
+    "                return binary_search_duplicate_elements(array, target, start, start_idx-1)\n",
+    "        else:\n",
+    "            if array.count(array[mid]) == 1:\n",
+    "                return binary_search_duplicate_elements(array, target, mid+1, end)\n",
+    "            elif array.count(array[mid]) > 1:                \n",
+    "                start_idx = array.index(array[mid]) + array.count(array[mid])\n",
+    "                return binary_search_duplicate_elements(array, target, start_idx, end)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(12, 13)"
+       "12"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
