--- a/dbn_bisect.ipynb
+++ b/dbn_bisect.ipynb
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +316,7 @@
     "        mid = (start + end) // 2\n",
     "        if target == array[mid]:\n",
     "            if array.count(array[mid]) == 1:\n",
-    "                return 1\n",
+    "                return mid\n",
     "            elif array.count(array[mid]) > 1:\n",
     "                #print(array.index(array[mid]), array.count(array[mid]))\n",
     "                start_idx = array.index(array[mid])\n",
@@ -339,22 +339,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "12"
+       "7"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "count_num_element(seq, 6, 0, len(seq)-1)"
+    "binary_search_duplicate_elements(seq, 4, 0, len(seq)-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 1, 2, 2, 2, 2, 3, 4, 5, 5, 5, 5, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 7, 7, 7, 7, 7, 8, 8, 8, 9, 9, 11]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(seq)"
    ]
   },
   {
