--- a/dbn_bisect.ipynb
+++ b/dbn_bisect.ipynb
@@ -281,7 +281,25 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def count_by_range(array, x, y):\n",
+    "    if x > y:\n",
+    "        x, y = y, x\n",
+    "        \n",
+    "    else:\n",
+    "        \"\"\"Count the number of elements in interval between x and y inclusive\"\"\"\n",
+    "        \"\"\"Find the index of x.\"\"\"\n",
+    "        max_less_than_x = max([k for k in array if k < x])\n",
+    "        x_idx = binary_search(array, max_less_than_x, 0, len(array)-1) + 1  # Add 1 since x is inclusive of the interval\n",
+    "        print(f\"max_less_than_x : {max_less_than_x},  x_idx : {x_idx}\")\n",
+    "        \n",
+    "        \"\"\"Find the index of y.\"\"\"\n",
+    "        min_greater_than_y = min([k for k in array if k > y])\n",
+    "        y_idx = binary_search(array, min_greater_than_y, 0, len(array)-1)\n",
+    "        print(f\"min_greater_than_y : {min_greater_than_y},  y_idx : {y_idx}\") \n",
+    "        \n",
+    "    return y_idx - x_idx       "
+   ]
   }
  ],
  "metadata": {
