More on dbn_bisect.ipynb

--- a/dbn_bisect.ipynb
+++ b/dbn_bisect.ipynb
@@ -291,7 +291,13 @@
     "    elif x == y:\n",
     "        min_greater_than_y = min([k for k in array if k > y])\n",
     "        x_idx = binary_search_duplicate_elements(array, x, 0, len(array)-1)\n",
-    "        y_idx = binary_search_duplicate_elements(array, min_greater_than_y, 0, len(array)-1)"
+    "        y_idx = binary_search_duplicate_elements(array, min_greater_than_y, 0, len(array)-1)\n",
+    "    \n",
+    "    else:\n",
+    "        x_idx = binary_search_duplicate_elements(array, x, 0, len(array)-1)\n",
+    "        y_idx = binary_search_duplicate_elements(array, y, 0, len(array)-1)\n",
+    "        \n",
+    "    return y_idx - x_idx"
    ]
   }
  ],
