More on dbn_bisect.ipynb

--- a/dbn_bisect.ipynb
+++ b/dbn_bisect.ipynb
@@ -277,22 +277,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def count_by_range(array, x, y):\n",
+    "    if x > y:\n",
+    "        x, y = y, x\n",
+    "        x_idx = binary_search_duplicate_elements(array, x, 0, len(array)-1)\n",
+    "        y_idx = binary_search_duplicate_elements(array, y, 0, len(array)-1)\n",
+    "        \n",
+    "    else:        \n",
+    "        min_greater_than_y = min([k for k in array if k > y])\n",
+    "        x_idx = binary_search_duplicate_elements(array, x, 0, len(array)-1)\n",
+    "        y_idx = binary_search_duplicate_elements(array, min_greater_than_y, 0, len(array)-1)    \n",
+    "\n",
+    "    return y_idx - x_idx"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4"
+       "10"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "count_by_range(seq, 5, 6)"
+    "count_by_range(seq, 2, 5)"
    ]
   },
   {
