More on dbn_bisect.ipynb

--- a/dbn_bisect.ipynb
+++ b/dbn_bisect.ipynb
@@ -24,8 +24,8 @@
     }
    ],
    "source": [
-    "N, x = list(map(int, input().split()))      # 22 6\n",
-    "seq = list(map(int, input().split()))       # 1 1 2 2 2 2 3 4 6 6 6 6 6 6 6 6 6 6 6 6 9 11\n",
+    "N, x = list(map(int, input().split()))      # 36 6\n",
+    "seq = list(map(int, input().split()))       # 1 1 2 2 2 2 3 4 5 5 5 5 6 6 6 6 6 6 6 6 6 6 6 6 6 7 7 7 7 7 8 8 8 9 9 11\n",
     "print(f\"N : {N},   x : {x}\")\n",
     "print(f\"seq : {seq}\")"
    ]
