More on dbn_bisect.ipynb

--- a/dbn_bisect.ipynb
+++ b/dbn_bisect.ipynb
@@ -11,15 +11,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "N : 22,   x : 6\n",
-      "seq : [1, 1, 2, 2, 2, 2, 3, 4, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 9, 11]\n"
+      "N : 36,   x : 6\n",
+      "seq : [1, 1, 2, 2, 2, 2, 3, 4, 5, 5, 5, 5, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 7, 7, 7, 7, 7, 8, 8, 8, 9, 9, 11]\n"
      ]
     }
    ],
